--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: truncSP
 Type: Package
 Title: Semi-parametric estimators of truncated regression models
-Version: 1.0
-Date: 2011-05-26
+Version: 1.1
+Date: 2011-09-07
 Author: Anita Lindmark and Maria Karlsson, Department of Statistics,
         Umea University
 Maintainer: Anita Lindmark <anita.lindmark@gmail.com>
@@ -11,6 +11,6 @@ Description: Semi parametric estimation of truncated linear regression
 License: GPL (>= 2)
 LazyLoad: yes
 Depends: R(>= 2.10), stats, methods, truncreg, boot
-Packaged: 2011-06-02 11:27:03 UTC; Anita
+Packaged: 2011-09-07 11:52:16 UTC; anli0053
 Repository: CRAN
-Date/Publication: 2011-06-04 07:25:14
+Date/Publication: 2011-09-07 13:07:39
